azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "wafvmname": {
            "type": "string"
        },
        "wafpassword": {
            "type": "securestring"
        },

        "count": {
            "type": "int"
        }
    },
    "variables": {
        "vnet": "[concat(parameters('wafvmname'),'-VirtualNetwork')]",
        "wafpublisher": "barracudanetworks",
        "wafoffer": "waf",
        "wafsku": "byol",
        "wafversion": "latest"
    },
    "resources": [
        {
            "name": "[toLower(concat(parameters('wafvmname'),'storage'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2021-04-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "WAF Storage Account"
            },
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[concat(parameters('wafvmname'),copyIndex(),'-pubIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "PublicIPAddress"
            },
            "copy":{
                "name":"pubipcopy",
                "count":"[parameters('count')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[toLower(concat(parameters('wafvmname'),copyIndex()))]"
                }
            }
        },
        {
            "name": "[concat(parameters('wafvmname'),'-nsg')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "nsgRule2",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "nsgRule3",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "nsgRule4",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('vnet')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('wafvmname'),'-nsg'))]"
            ],
            "tags": {
                "displayName": "WAFVirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "WAF-VirtualNetwork-Subnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('wafvmname'),'-nsg'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('wafvmname'),copyIndex(), '-NIC')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('wafvmname'),copyIndex(),'-pubIP'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
            ],
            "tags": {
                "displayName": "waf-NetworkInterface"
            },
            "copy": {
                "name": "nic copy",
                "count": "[parameters('count')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('wafvmname'),copyIndex(),'-pubIP'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'WAF-VirtualNetwork-Subnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('wafvmname'), copyIndex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('wafvmname'),copyIndex(), '-NIC'))]"
            ],
            "tags": {
                "displayName": "BarracudaWAF"
            },
            "copy": {
                "name": "wafcopy",
                "count": "[parameters('count')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_A2_v2"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('wafvmname'), copyIndex())]",
                    "adminUsername": "adminUsername",
                    "adminPassword": "[parameters('wafpassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('wafpublisher')]",
                        "offer": "[variables('wafoffer')]",
                        "sku": "[variables('wafsku')]",
                        "version": "[variables('wafversion')]"
                    },
                    "osDisk": {
                        "name": "[concat(copyIndex(), '-OSDIsk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(parameters('wafvmname'),copyIndex(), '-NIC'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(concat(parameters('wafvmname'),'storage')))).primaryEndpoints.blob]"
                    }
                }
            }
        }
    ],
    "outputs": {}
}
